--- a/personal-diary-app/package.json
+++ b/personal-diary-app/package.json
@@ -22,16 +22,19 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-animatable": "^1.4.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-elements": "^3.4.3",
     "react-native-multiple-select": "^0.5.12",
     "react-native-onboarding-swiper": "^1.3.0",
+    "react-native-paper": "^5.12.5",
     "react-native-pell-rich-editor": "^1.9.0",
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
     "react-native-timeline-flatlist": "^0.8.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
